--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     {{content-for 'head'}}
 
     <link rel="stylesheet" href="assets/vendor.css">
-    <link rel="stylesheet" href="assets/admin.css">
+    <link rel="stylesheet" href="assets/console.css">
 
     {{content-for 'head-footer'}}
   </head>
@@ -18,7 +18,7 @@
     {{content-for 'body'}}
 
     <script src="assets/vendor.js"></script>
-    <script src="assets/admin.js"></script>
+    <script src="assets/console.js"></script>
 
     {{content-for 'body-footer'}}
   </body>
