--- a/app/index.html
+++ b/app/index.html
@@ -15,11 +15,19 @@
     {{content-for 'head-footer'}}
   </head>
   <body role="document">
+    
     {{content-for 'body'}}
+    
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">&copy; 2016 ICEsoft Technologies Inc</p>
+      </div>
+    </footer>
 
     <script src="assets/vendor.js"></script>
     <script src="assets/console.js"></script>
 
     {{content-for 'body-footer'}}
+
   </body>
 </html>
